# continual-auto-research

./: README.md  pyproject.toml
docs/: UI_API_DESIGN.md
src/continual_auto_research/: __init__.py
src/continual_auto_research/api/: app.py  builders.py  runs.py  store.py
src/continual_auto_research/core/: climber.py  hill_climb.py  proposers.py  runner.py  scoring.py
src/continual_auto_research/frontend/: index.html  pipeline-controller.js
tests/: test_api.py  test_broker_runner.py  test_climber.py  test_climber_advanced.py  test_end_to_end.py  test_proposers.py  test_scoring.py  test_trace.py
