[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "continual-auto-research"
version = "0.1.0"
description = "Programmatic hill-climbing optimiser for experiment candidates, with a thin web UI"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    # Shared GPU infra — both consumer repos depend on the same source so they
    # never drift. Installs from GitHub; for local dev, override with an editable
    # install:  pip install -e ../ucl-gpu-infra
    "ucl-gpu-infra @ git+https://github.com/shr1ram/ucl-gpu-infra@v0.1.0",
]

[project.optional-dependencies]
# `websockets` is required for the /ws/run endpoint — without it uvicorn starts
# with ws="none" and the websocket route 404s. Use uvicorn's standard extra so
# the WS protocol support is always present.
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "websockets>=12"]
# LLM proposer backends: `openai` is the client for the api + ollama proposers
# (both OpenAI-compatible). The claude proposer shells out to the CLI (no dep).
llm = ["openai>=1.0", "httpx>=0.24"]
test = ["pytest>=7"]

[project.scripts]
car-serve = "continual_auto_research.api.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
continual_auto_research = ["frontend/*.html", "frontend/*.js"]
